alignment fix

--- a/small-components/sidebar/style..css
+++ b/small-components/sidebar/style..css
@@ -16,5 +16,5 @@
 
 button{
     width: 100%;
-    max-height: 20px;
+    max-height: 50px;
 }
