--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     text-align: center;
     font-family: "Poppins", sans-serif;
     color: rgb(76, 240, 255);
-    /* text-decoration:wavy; */
     font-size: 50px;
     font-weight: 800;
     text-shadow: 0px 0px 50px rgb(255, 255, 255);
@@ -32,6 +31,8 @@
     margin: 30px;
     height: 200px;
     border-radius: 20px;
+    padding: 10px;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
